[gd_scene load_steps=10 format=3 uid="uid://b2j7n1b76p01c"]

[ext_resource type="Script" path="res://Maps/TestingGrounds/testing grounds.gd" id="1_5c5tl"]
[ext_resource type="PackedScene" uid="uid://c0x0dnj5q0va2" path="res://Enemies/Basic/enemy.tscn" id="3_pjdrh"]
[ext_resource type="Texture2D" uid="uid://cula1ria8r5pi" path="res://Assets/Images/kenney-prototype-textures/dark/texture_03.png" id="3_s5jtl"]
[ext_resource type="PackedScene" uid="uid://bb6ku2icjwyy0" path="res://Players/Bronygamedev/Bronygamedev.tscn" id="5_v0r6u"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_kcvux"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_mc4mg"]
sky_material = SubResource("ProceduralSkyMaterial_kcvux")

[sub_resource type="Environment" id="Environment_3cshr"]
background_mode = 2
sky = SubResource("Sky_mc4mg")
tonemap_mode = 2

[sub_resource type="NavigationMesh" id="NavigationMesh_j6mrc"]
vertices = PackedVector3Array(-73.901, 0.718637, -7.801, -61.701, 0.718637, -7.801, -61.701, 0.718637, -8.60101, -73.901, 0.718637, -7.801, -61.701, 0.718637, -8.60101, -61.301, 0.718637, -9.00101, -73.901, 0.718637, -73.901, -51.601, 0.718637, -8.701, -5.201, 0.718637, -8.701, -5.00101, 0.718637, -9.10101, -51.901, 0.718637, -9.00101, -51.901, 0.718637, -9.00101, -5.00101, 0.718637, -9.10101, -4.201, 0.718637, -9.201, -4.301, 0.718637, -73.901, -73.901, 0.718637, -73.901, -61.301, 0.718637, -9.00101, -4.201, 0.718637, -9.201, -3.801, 0.718637, -9.201, -3.701, 0.718637, -73.901, -4.301, 0.718637, -73.901, -2.801, 0.718637, -8.10101, -2.10101, 0.718637, -8.201, -2.10101, 0.718637, -8.90101, -2.90101, 0.718637, -9.00101, -3.801, 0.718637, -9.201, -3.201, 0.718637, -9.201, -0.901009, 0.718637, -9.301, -0.901009, 0.718637, -73.901, -3.701, 0.718637, -73.901, -2.90101, 0.718637, -9.00101, -2.10101, 0.718637, -8.90101, -1.90101, 0.718637, -9.201, -3.201, 0.718637, -9.201, -3.201, 0.718637, -9.201, -1.90101, 0.718637, -9.201, -0.901009, 0.718637, -9.301, -0.901009, 0.718637, -9.301, 4.39899, 0.718637, -9.301, 4.39899, 0.718637, -73.901, -0.901009, 0.718637, -73.901, 4.39899, 0.718637, -73.901, 4.39899, 0.718637, -9.301, 5.39899, 0.718637, -9.201, 4.39899, 0.718637, -73.901, 5.39899, 0.718637, -9.201, 5.59899, 0.718637, -8.90101, 73.999, 0.718637, -8.10101, 73.999, 0.718637, -73.901, 5.59899, 0.718637, -8.90101, 5.59899, 0.718637, -8.10101, 73.999, 0.718637, -8.10101, -17.901, 12.4686, -66.301, -17.901, 12.4686, -65.601, -17.401, 12.4686, -65.801, -17.401, 12.4686, -67.701, -66.501, 12.4686, -65.501, -65.901, 12.4686, -65.501, -65.901, 12.4686, -66.301, -66.501, 12.4686, -67.701, -66.501, 12.4686, -67.701, -65.901, 12.4686, -66.301, -65.501, 12.4686, -66.701, -18.301, 12.4686, -66.701, -17.901, 12.4686, -66.301, -17.401, 12.4686, -67.701, -65.501, 12.4686, -66.701, -18.301, 12.4686, -66.701, -17.401, 12.4686, -67.701, -66.501, 12.4686, -67.701, -17.901, 12.4686, -65.601, -17.901, 12.4686, -18.601, -17.401, 12.4686, -18.601, -17.401, 12.4686, -65.801, -60.701, 9.21864, -17.401, -52.501, 9.21864, -17.401, -52.501, 9.21864, -18.201, -60.701, 9.21864, -18.201, -64.901, 9.21864, -65.701, -64.901, 9.21864, -18.601, -61.101, 9.21864, -18.601, -61.101, 9.21864, -18.601, -60.701, 9.21864, -18.201, -52.501, 9.21864, -18.201, -52.101, 9.21864, -18.601, -64.901, 9.21864, -65.701, -52.101, 9.21864, -18.601, -18.901, 9.21864, -18.601, -18.901, 9.21864, -65.701, -64.901, 9.21864, -65.701, -65.901, 12.4686, -65.501, -66.501, 12.4686, -65.501, -66.501, 12.4686, -18.601, -65.901, 12.4686, -18.601, -60.701, 1.46864, -4.00101, -52.501, 1.46864, -4.00101, -52.501, 9.21864, -17.401, -60.701, 9.21864, -17.401, -4.00101, 0.718637, -3.00101, -4.00101, 0.718637, -3.801, -4.801, 0.718637, -3.801, -5.10101, 0.718637, -3.00101, -5.50101, 0.718637, -2.40101, -5.40101, 0.718637, -2.801, -5.201, 0.718637, -4.201, -5.201, 0.718637, -8.701, -51.601, 0.718637, -8.701, -51.501, 0.718637, -3.201, -5.40101, 0.718637, -2.801, -5.10101, 0.718637, -3.00101, -4.801, 0.718637, -3.801, -5.201, 0.718637, -4.201, -51.501, 0.718637, -3.201, -51.701, 0.718637, -3.00101, -5.50101, 0.718637, -2.40101, 4.299, 1.96864, -2.10101, -4.50101, 1.96864, -2.00101, 4.59899, 1.96864, -1.90101, 4.59899, 1.96864, -8.301, -1.10101, 1.96864, -8.301, 4.09899, 1.96864, -8.201, 4.59899, 1.96864, -8.301, 4.09899, 1.96864, -8.201, 4.39899, 1.96864, -8.00101, 4.49899, 1.96864, -2.40101, 4.299, 1.96864, -2.10101, 4.59899, 1.96864, -1.90101, 4.59899, 1.96864, -8.301, 4.39899, 1.96864, -8.00101, 4.49899, 1.96864, -2.40101, 4.59899, 1.96864, -1.90101, -4.201, 1.96864, -4.801, 1.39899, 1.96864, -4.801, -3.60101, 1.96864, -5.00101, -4.201, 1.96864, -4.801, -3.60101, 1.96864, -5.00101, -3.801, 1.96864, -5.301, -4.201, 1.96864, -8.201, -4.201, 1.96864, -4.801, -3.801, 1.96864, -5.301, -3.801, 1.96864, -8.201, -2.10101, 0.718637, -7.60101, -2.10101, 0.718637, -8.201, -2.801, 0.718637, -8.10101, -1.701, 0.718637, -7.201, -2.10101, 0.718637, -7.60101, -2.801, 0.718637, -8.10101, -2.801, 0.718637, -5.90101, 2.09899, 0.718637, -5.801, 2.199, 0.718637, -7.201, -1.701, 0.718637, -7.201, -2.801, 0.718637, -5.90101, 5.59899, 0.718637, -2.301, 73.999, 0.718637, -2.301, 73.999, 0.718637, -8.10101, 5.59899, 0.718637, -8.10101, -73.901, 0.718637, -4.00101, -61.701, 0.718637, -4.00101, -61.701, 0.718637, -7.801, -73.901, 0.718637, -7.801, 1.99899, 0.718637, -3.801, 1.199, 0.718637, -3.801, 1.199, 0.718637, -3.00101, 3.49899, 0.718637, -3.00101, 2.39899, 0.718637, -5.50101, 2.39899, 0.718637, -4.201, 3.49899, 0.718637, -3.00101, 3.49899, 0.718637, -7.201, 2.39899, 0.718637, -4.201, 1.99899, 0.718637, -3.801, 3.49899, 0.718637, -3.00101, 2.199, 0.718637, -7.201, 2.09899, 0.718637, -5.801, 2.39899, 0.718637, -5.50101, 3.49899, 0.718637, -7.201, -52.401, 0.968637, -3.00101, -52.501, 1.46864, -4.00101, -60.701, 1.46864, -4.00101, -60.801, 0.968637, -3.00101, -4.60101, 0.718637, 73.999, -4.50101, 0.718637, -0.901009, -5.10101, 0.718637, -0.901009, -52.401, 0.968637, -3.00101, -60.801, 0.968637, -3.00101, -61.401, 0.718637, -2.90101, -51.701, 0.718637, -3.00101, -52.401, 0.968637, -3.00101, -61.401, 0.718637, -2.90101, -61.701, 0.718637, -3.201, -61.701, 0.718637, -4.00101, -73.901, 0.718637, -4.00101, -61.401, 0.718637, -2.90101, -61.701, 0.718637, -3.201, -73.901, 0.718637, -4.00101, -73.901, 0.718637, 73.999, -5.40101, 0.718637, -1.10101, -5.50101, 0.718637, -2.40101, -51.701, 0.718637, -3.00101, -5.10101, 0.718637, -0.901009, -5.40101, 0.718637, -1.10101, -51.701, 0.718637, -3.00101, -61.401, 0.718637, -2.90101, -73.901, 0.718637, 73.999, -4.60101, 0.718637, 73.999, -4.00101, 0.718637, -3.00101, 1.199, 0.718637, -3.00101, 1.199, 0.718637, -3.801, -4.00101, 0.718637, -3.801, 73.999, 0.718637, -2.301, 5.59899, 0.718637, -2.301, 5.59899, 0.718637, -1.50101, 73.999, 0.718637, -2.301, 5.59899, 0.718637, -1.50101, 5.39899, 0.718637, -1.10101, 73.999, 0.718637, -2.301, 5.39899, 0.718637, -1.10101, 5.09899, 0.718637, -0.901009, 4.59899, 0.718637, 73.999, 73.999, 0.718637, 73.999, 5.09899, 0.718637, -0.901009, 4.49899, 0.718637, -0.901009, 4.59899, 0.718637, 73.999, -4.60101, 0.718637, 73.999, 4.59899, 0.718637, 73.999, 4.49899, 0.718637, -0.901009, -4.50101, 0.718637, -0.901009)
polygons = [PackedInt32Array(2, 1, 0), PackedInt32Array(4, 3, 5), PackedInt32Array(5, 3, 6), PackedInt32Array(8, 7, 9), PackedInt32Array(9, 7, 10), PackedInt32Array(12, 11, 13), PackedInt32Array(13, 11, 16), PackedInt32Array(13, 16, 14), PackedInt32Array(14, 16, 15), PackedInt32Array(17, 20, 18), PackedInt32Array(18, 20, 19), PackedInt32Array(22, 21, 23), PackedInt32Array(23, 21, 24), PackedInt32Array(26, 25, 27), PackedInt32Array(27, 25, 29), PackedInt32Array(27, 29, 28), PackedInt32Array(31, 30, 32), PackedInt32Array(32, 30, 33), PackedInt32Array(36, 35, 34), PackedInt32Array(40, 39, 37), PackedInt32Array(37, 39, 38), PackedInt32Array(43, 42, 41), PackedInt32Array(45, 44, 46), PackedInt32Array(46, 44, 48), PackedInt32Array(46, 48, 47), PackedInt32Array(49, 51, 50), PackedInt32Array(53, 52, 54), PackedInt32Array(54, 52, 55), PackedInt32Array(57, 56, 58), PackedInt32Array(58, 56, 59), PackedInt32Array(60, 62, 61), PackedInt32Array(65, 64, 63), PackedInt32Array(67, 66, 68), PackedInt32Array(68, 66, 69), PackedInt32Array(71, 70, 72), PackedInt32Array(72, 70, 73), PackedInt32Array(77, 76, 74), PackedInt32Array(74, 76, 75), PackedInt32Array(80, 79, 78), PackedInt32Array(82, 81, 83), PackedInt32Array(83, 81, 84), PackedInt32Array(84, 81, 85), PackedInt32Array(87, 86, 88), PackedInt32Array(88, 86, 89), PackedInt32Array(93, 92, 90), PackedInt32Array(90, 92, 91), PackedInt32Array(97, 96, 94), PackedInt32Array(94, 96, 95), PackedInt32Array(99, 98, 100), PackedInt32Array(100, 98, 101), PackedInt32Array(103, 102, 104), PackedInt32Array(104, 102, 105), PackedInt32Array(105, 102, 107), PackedInt32Array(105, 107, 106), PackedInt32Array(109, 108, 110), PackedInt32Array(110, 108, 111), PackedInt32Array(114, 113, 112), PackedInt32Array(117, 116, 115), PackedInt32Array(120, 119, 118), PackedInt32Array(123, 122, 121), PackedInt32Array(126, 125, 124), PackedInt32Array(128, 127, 129), PackedInt32Array(129, 127, 130), PackedInt32Array(133, 132, 131), PackedInt32Array(135, 134, 136), PackedInt32Array(140, 139, 137), PackedInt32Array(137, 139, 138), PackedInt32Array(141, 143, 142), PackedInt32Array(145, 144, 146), PackedInt32Array(146, 144, 147), PackedInt32Array(149, 148, 150), PackedInt32Array(150, 148, 151), PackedInt32Array(155, 154, 152), PackedInt32Array(152, 154, 153), PackedInt32Array(159, 158, 156), PackedInt32Array(156, 158, 157), PackedInt32Array(161, 160, 162), PackedInt32Array(162, 160, 163), PackedInt32Array(165, 164, 166), PackedInt32Array(166, 164, 167), PackedInt32Array(170, 169, 168), PackedInt32Array(172, 171, 173), PackedInt32Array(173, 171, 174), PackedInt32Array(176, 175, 177), PackedInt32Array(177, 175, 178), PackedInt32Array(181, 180, 179), PackedInt32Array(184, 183, 182), PackedInt32Array(187, 186, 185), PackedInt32Array(190, 189, 188), PackedInt32Array(192, 191, 193), PackedInt32Array(193, 191, 194), PackedInt32Array(197, 196, 195), PackedInt32Array(199, 198, 200), PackedInt32Array(200, 198, 201), PackedInt32Array(201, 198, 203), PackedInt32Array(201, 203, 202), PackedInt32Array(207, 206, 204), PackedInt32Array(204, 206, 205), PackedInt32Array(210, 209, 208), PackedInt32Array(213, 212, 211), PackedInt32Array(215, 214, 216), PackedInt32Array(216, 214, 217), PackedInt32Array(217, 214, 218), PackedInt32Array(221, 220, 219), PackedInt32Array(225, 224, 222), PackedInt32Array(222, 224, 223)]
cell_size = 0.1
agent_height = 2.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_gh2bj"]
albedo_texture = ExtResource("3_s5jtl")
uv1_scale = Vector3(10, 10, 10)
uv1_world_triplanar = true

[node name="testing grounds" type="Node3D"]
script = ExtResource("1_5c5tl")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866025, -0.5, -2.18557e-08, 0, -4.37114e-08, 1, -0.5, 0.866025, 3.78552e-08, 0, 0, 0)
light_energy = 0.5
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_3cshr")

[node name="Map" type="NavigationRegion3D" parent="."]
navigation_mesh = SubResource("NavigationMesh_j6mrc")
enter_cost = 5.0

[node name="Floor" type="CSGBox3D" parent="Map"]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0)
use_collision = true
size = Vector3(300, 1, 300)
material = SubResource("StandardMaterial3D_gh2bj")

[node name="walls" type="CSGCombiner3D" parent="Map"]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0)
use_collision = true

[node name="CSGBox3D2" type="CSGBox3D" parent="Map/walls"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4, 149.502)
size = Vector3(300, 10, 1)

[node name="CSGBox3D3" type="CSGBox3D" parent="Map/walls"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4, -149.502)
size = Vector3(300, 10, 1)

[node name="CSGBox3D4" type="CSGBox3D" parent="Map/walls"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -149.502, 4, 0)
size = Vector3(300, 10, 1)

[node name="CSGBox3D5" type="CSGBox3D" parent="Map/walls"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 149.502, 4, 0)
size = Vector3(300, 10, 1)

[node name="raisedPlatform" type="CSGCombiner3D" parent="Map"]
use_collision = true

[node name="innerFloor" type="CSGCombiner3D" parent="Map/raisedPlatform"]

[node name="outerFloor" type="CSGBox3D" parent="Map/raisedPlatform/innerFloor"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -41.9257, 10.059, -43.1706)
size = Vector3(50, 3.86427, 50)

[node name="ramp" type="CSGBox3D" parent="Map/raisedPlatform/innerFloor"]
transform = Transform3D(1, 0, 0, 0, 0.866025, -0.5, 0, 0.5, 0.866025, -56.5787, 3.43775, -9.10899)
size = Vector3(9.07667, 1, 21.1444)

[node name="innerfloor" type="CSGCombiner3D" parent="Map/raisedPlatform"]
operation = 2

[node name="CSGBox3D2" type="CSGBox3D" parent="Map/raisedPlatform/innerfloor"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -41.9257, 10.7872, -39.9036)
size = Vector3(47.067, 4, 52.652)

[node name="corners" type="CSGCombiner3D" parent="Map"]
use_collision = true

[node name="CSGBox3D" type="CSGBox3D" parent="Map/corners"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, -1.93628)
size = Vector3(9.85414, 1, 1)

[node name="CSGBox3D2" type="CSGBox3D" parent="Map/corners"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 4.5682, 1, -5.18897)
size = Vector3(7.12883, 1, 1)

[node name="CSGBox3D3" type="CSGBox3D" parent="Map/corners"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.19885, 1, -4.89591)
size = Vector3(6.13028, 1, 1)

[node name="CSGBox3D4" type="CSGBox3D" parent="Map/corners"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.31172, 1, -8.28996)
size = Vector3(5.70468, 1, 1)

[node name="CSGBox3D5" type="CSGBox3D" parent="Map/corners"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4, 1, -6.51291)
size = Vector3(1.22215, 1, 4.2239)

[node name="EnemySpawn" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -39.1955, 8.77435, 17.7988)

[node name="enemy" parent="." instance=ExtResource("3_pjdrh")]
process_mode = 4
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -39.1955, 8.77435, 17.7988)
visible = false

[node name="SpawnCoolDown" type="Timer" parent="."]

[node name="Player" parent="." instance=ExtResource("5_v0r6u")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.3, 0)

[node name="Head" parent="Player/Skeleton3D" index="0"]
transform = Transform3D(-1, -5.82645e-12, -1.27952e-06, -5.0404e-07, 0.919142, 0.393918, 1.17606e-06, 0.393917, -0.919146, 4.76834e-07, 1.295, 0.425)

[node name="eye_ball_left_001" parent="Player/Skeleton3D" index="1"]
transform = Transform3D(-0.88988, -0.158123, 0.427912, 0.392503, 0.212653, 0.894825, -0.232491, 0.964248, -0.127175, 0.180807, 1.59254, 0.711335)

[node name="eye_ball_right_001" parent="Player/Skeleton3D" index="2"]
transform = Transform3D(-0.88988, 0.158125, -0.427914, -0.392505, 0.212653, 0.89483, 0.232494, 0.964247, -0.127175, -0.180806, 1.59254, 0.711337)

[connection signal="child_entered_tree" from="." to="." method="_on_child_entered_tree"]
[connection signal="timeout" from="SpawnCoolDown" to="." method="_on_cool_down_timeout"]

[editable path="Player"]
[editable path="Player/Skeleton3D/Head/Guns/Type-a"]
[editable path="Player/HUD"]
